# hotel-booking-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  push.bat  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b9de78e1d3e7_initial_migration.py
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: __init__.py
app/api/v1/routers/: admin.py  amenities.py  auth.py  bookings.py  rooms.py
app/core/: cache.py  security.py
app/db/: session.py
app/models/: __init__.py  amenity.py  booking.py  room.py  user.py
app/repositories/: __init__.py  amenity_repository.py  booking_repository.py  room_repository.py  user_repository.py
app/schemas/: __init__.py  amenity.py  booking.py  room.py  user.py
app/tasks/: __init__.py  booking_tasks.py  celery_app.py
scripts/: create_admin.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
